# trax

./: .editorconfig  .gitignore  Cargo.toml  design.md
doc/: bib.yml  calculator.trax  spec.typ  todo.trax  todo_todos.trax
lib/document/: Cargo.toml
lib/document/benches/: document.rs
lib/document/examples/: new_document.rs
lib/document/src/: lib.rs  manipulation.rs
lib/document/tests/integration/: drop.rs  main.rs  parse.rs
lib/document/tests/testfiles/: todo.trax
lib/document/tests/testfiles/drop/: todo.1.trax  todo.2.trax  todo.3.trax  todo.4.trax
lib/html-bridge/: Cargo.toml  index.html
lib/html-bridge/src/: lib.rs
lib/parser/: Cargo.toml  todo.trax
lib/parser/benches/: parse.rs
lib/parser/examples/: parse.rs
lib/parser/fuzz/: Cargo.toml
lib/parser/fuzz/src/: main.rs
lib/parser/src/: display.rs  error.rs  lib.rs  stream.rs  xmlchar.rs
lib/parser/tests/integration/: api.rs  comments.rs  document.rs  elements.rs  main.rs  text.rs  token.rs
