[package]
name = "trax-document"
version = "0.1.0"
description = "TRAX document representation"
repository = "https://github.com/carterisonline/trax/tree/trunk/lib/document"
edition = "2021"
publish = false
authors = ["Carter Reeb <me@carteris.online>"]

[dependencies]
seq-macro = "0.3.5"
thiserror = "1"
trax-parser = { path = "../parser" }

[dev-dependencies]
const_format = "0.2.32"
criterion = "0.5.1"
paste = "1.0.14"
pretty_assertions = "1.4.0"

[[bench]]
name = "document"
harness = false
